<resources>
    <string name="app_name">wishApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="hint_name">Wish name</string>
    <string name="hint_description">Wish description</string>
    <string name="hint_category">Wish category</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_add">Add wish</string>
    <string name="button_new">New wish!</string>
    <string name="button_edit_wish">Edit wish</string>
    <string name="button_delete_wish">Delete wish</string>
    <string name="button_find">Find wish!</string>
    <string name="hint_enter_name">Enter name</string>
    <string name="hint_enter_description">Enter description</string>
</resources>
