<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".NewWishActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wish_photo" android:layout_weight="4"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0">
        <Button
                android:text="@string/button_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_camera" android:layout_weight="1"/>
        <Button
                android:text="@string/button_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_gallery" android:layout_weight="1"/>
    </LinearLayout>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_name"
              android:id="@+id/input_name"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_description"
              android:id="@+id/input_description" />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button_save" android:layout_weight="0"
            android:text="@string/button_add"/>
</LinearLayout>